k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medchain
  labels:
    name: medchain
    app: medchain
    environment: production
